@@ -156,7 +156,7 @@ namespace libtorrent
 
 				// return all assigned quota to all the
 				// bandwidth channels this peer belongs to
-				for (int j = 0; j < 5 && i->channel[j]; ++j)
+				for (int j = 0; j < bw_request::max_bandwidth_channels && i->channel[j]; ++j)
 				{
 					bandwidth_channel* bwc = i->channel[j];
 					bwc->return_quota(i->assigned);
@@ -165,7 +165,7 @@ namespace libtorrent
 				i = m_queue.erase(i);
 				continue;
 			}
-			for (int j = 0; j < 5 && i->channel[j]; ++j)
+			for (int j = 0; j < bw_request::max_bandwidth_channels && i->channel[j]; ++j)
 			{
 				bandwidth_channel* bwc = i->channel[j];
 				bwc->tmp = 0;
@@ -176,7 +176,7 @@ namespace libtorrent
 		for (queue_t::iterator i = m_queue.begin()
 			, end(m_queue.end()); i != end; ++i)
 		{
-			for (int j = 0; j < 5 && i->channel[j]; ++j)
+			for (int j = 0; j < bw_request::max_bandwidth_channels && i->channel[j]; ++j)
 			{
 				bandwidth_channel* bwc = i->channel[j];
 				if (bwc->tmp == 0) channels.push_back(bwc);
